Fix for broken CSS

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -67,8 +67,8 @@ a:hover {
   clear: both;
 }
 #header, #about, #getting-started {
-  padding-left: 75px;
-  padding-right: 30px;
+  padding: 5px;                                                                                                                                             
+  padding-left: 50px;    
 }
 #header {
   height: 64px;
